# itmoCPPLabs

lab1/: CMakeLists.txt  Closed_Polyline.cpp  Closed_Polyline.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  Polynomial.h  Regular_polygon.cpp  Regular_polygon.h  Trapeze.cpp  Trapeze.h  Triangle.cpp  Triangle.h  main.cpp
lab2/: CMakeLists.txt  MyMap.h  main.cpp
lab3/: CircularBuffer.h  Point.cpp  Point.h  algorithms.h  main.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: Cube.h  HumanSolver.h  Solver.h
lab4/src/: Cube.cpp  HumanSolver.cpp  Solver.cpp  Sweeps.cpp
lab5/: MyAllocator.h  main.cpp
lab6/: CMakeLists.txt  Polynomial.h  main.cpp
